2020-12-30  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix isspace() arg problem on NetBSD.

	* tools/trietool.c (command_add_list, string_trim):
	  - Cast char to unsigned char before passing to isspace().

	Thanks Sean <scole_mail@gmx.com> for the report via a personal mail.

2019-12-20  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use GitHub issue tracker as bug report address.

	* configure.ac:
	  - Replace bug report e-mail address with GitHub issue tracker URL.

2019-08-05  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Stop installing README.migration

	It's supposed to be internal document now.

	* Makefile.am:
	  - Remove README.migration from doc_DATA.

2019-01-21  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix cross-compiling issue caused by AC_FUNC_MALLOC

	* configure.ac:
	  - Replace AC_FUNC_MALLOC with AC_CHECK_FUNCS([malloc]),
	    as we don't rely on GNU's malloc(0) behavior.

	Thanks Vanessa McHale for the report. Closes: #11

2018-11-23  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix wrong key listing in byte trie

	* tests/Makefile.am, +tests/test_byte_list.c:
	  - Add test case
	* datrie/alpha-map.c (alpha_map_recalc_work_area):
	  - Index trie_to_alpha_map[] using TrieIndex, not TrieChar type,
	    to prevent overflow upon incrementing over 0xff.
	  - Drop tc variable and just reuse trie_last.

	Thanks @legale for the report.

	Closes: #9
	https://github.com/tlwg/libdatrie/issues/9

2018-06-19  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac:
	  - Bump library revision to reflect code changes.

	* NEWS:
	=== Version 0.2.12 ===

2018-06-19  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Use HTTPS in URL

	* README:
	  - Update document URL to HTTPS

2018-06-14  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Cast (wchar_t *) to fix warnings in tests

	"%ls" printf() format requires (wchar_t *) [aka int *] arg.
	So, let's cast (AlphaChar *) [aka unsigned int *] to satisfy it.
